@@ -37,6 +37,9 @@ Sort output by space used (default is to sort on uid).
 .I "-F,--files-sort"
 Sort output by number of files used (default is to sort on uid).
 .TP
+.I "-u,--usage-only"
+Only report usage information, not quota limits.
+.TP
 .I "-H,--suppress-heading"
 Suppress printing of the initial heading in the report.
 .TP
